--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,11 +1,16 @@
 <LayoutHome>
+  <AuAlert
+    @skin="warning"
+    @icon="alert-triangle"
+    @size="small"
+    class="au-u-margin-bottom-none"
+  >
+    U hebt niet de juiste rechten om processen toe te voegen of aan te passen.
+    Processen of processtappen raadplegen, is wel steeds mogelijk.
+  </AuAlert>
   <AuBodyContainer class="au-u-background-gray-100">
     <section class="c-home">
       <div class="au-o-flow">
-        <AuAlert @skin="warning" @icon="alert-triangle" @size="small">
-          U hebt niet de juiste rechten om processen toe te voegen of aan te
-          passen. Processen of processtappen raadplegen, is wel steeds mogelijk.
-        </AuAlert>
         <AuContent>
           <AuHeading @level="1" @skin="2">Welkom bij Open Proces huis, jouw
             centrale bron voor het ontdekken en delen van processen.</AuHeading>
