Hide help route

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -89,10 +89,13 @@
               </div>
             {{/if}}
           </div>
-          <p class="au-u-text-center">
+          {{! 
+          TODO: Reintroduce when help page gets content
+          }}
+          {{! <p class="au-u-text-center">
             <AuLink @route="help">Meer informatie over processen en BPMN
               bestanden</AuLink>
-          </p>
+          </p> }}
         </div>
       </div>
     </section>
