--- a/app/templates/process-steps/index.hbs
+++ b/app/templates/process-steps/index.hbs
@@ -43,8 +43,11 @@
     <PageHeader>
       <:title>Processtappen</:title>
       <:subtitle>
-        <AuLink @route="help" @skin="secondary" @icon="circle-info">Over BPMN
-          bestanden</AuLink>
+        {{! 
+          TODO: Reintroduce when help page gets content
+          }}
+        {{! <AuLink @route="help" @skin="secondary" @icon="circle-info">Over BPMN
+          bestanden</AuLink> }}
       </:subtitle>
       <:action></:action>
     </PageHeader>
