Forbid adding bpmn files to attachments

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -472,6 +472,7 @@
     <CustomFileUpload
       @title="Bestand selecteren"
       @helpTextDragDrop="Bestand wordt meteen toegevoegd aan bibliotheek na selectie"
+      @bpmnForbidden="true"
       @updateProcess={{this.addFileToProcess}}
       @onFinishUpload={{this.fileUploaded}}
     />
