--- a/app/templates/process-steps/index.hbs
+++ b/app/templates/process-steps/index.hbs
@@ -92,7 +92,7 @@
           </TableMessage>
         {{else}}
           <c.body as |element|>
-            <td>{{or element.name "/"}}</td>
+            <td>{{or (truncate element.name 50 true) "/"}}</td>
             <td>{{capitalize-first (or element.type.name "/")}}</td>
             <td>{{element.bpmnProcess.bpmnFile.name}}</td>
             <td>
