--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -91,7 +91,7 @@
                 {{process.title}}
               </LinkTo>
             </td>
-            <td>{{or process.description "/"}}</td>
+            <td>{{or (truncate process.description 150 true) "/"}}</td>
             <td>{{date-format process.modified}}</td>
             <td>{{process.publisher.name}}</td>
           </c.body>
