Ditch unnecessary helper function

--- a/app/components/process-step-select-by-type.hbs
+++ b/app/components/process-step-select-by-type.hbs
@@ -10,6 +10,6 @@
     @triggerId={{@id}}
     as |type|
   >
-    {{capitalize-first type.name}}
+    {{capitalize type.name}}
   </PowerSelect>
 </div>
