Rewrite diagram help text

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -200,7 +200,8 @@
         {{else if this.latestBpmnFile}}
           <p class="au-u-margin-top-none">
             <AuHelpText @skin="secondary">Klik en hou vast om diagram te
-              bewegen. Gebruik ctrl en scrollwiel om in en uit te zoomen.</AuHelpText>
+              bedienen. Gebruik ctrl en scrollwiel om in en uit te zoomen. Klik
+              elders om bediening uit te schakelen.</AuHelpText>
           </p>
           <BpmnViewer @bpmnFile={{this.latestBpmnFile}} />
           <DataCard class="au-u-margin-top-small">
