--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -101,8 +101,9 @@
                 @skin="naked"
                 @alert="true"
                 @width="block"
+                @hideText="true"
                 {{on "click" (fn this.openDeleteModal process)}}
-              />
+              >Verwijder</AuButton>
             </td>
           </c.body>
         {{/if}}
