Update help texts

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -309,8 +309,9 @@
           <AuHeading @level="2" @skin="3">Versies</AuHeading>
         </div>
         <AuHelpText @skin="secondary" class="au-u-margin-top-none">
-          Naast het huidige BPMN-bestand worden ook oudere versies bijgehouden.
-          Het huidige BPMN-bestand is in vet aangeduid.
+          Ontdek hier vorige versies van het BPMN-diagram van dit proces,
+          geüpload in het Open Proces Huis. Deze versies zijn beschikbaar om te
+          downloaden.
         </AuHelpText>
       </div>
 
@@ -381,8 +382,9 @@
           </AuButtonGroup>
         </div>
         <AuHelpText @skin="secondary" class="au-u-margin-top-none">
-          Verschillende bestanden kunnen een proces betekenis geven.
-          Niet-BPMN-bestanden kunnen zodoende als bijlagen bewaard worden.
+          Bijlagen kunnen worden toegevoegd om het BPMN-diagram te
+          verduidelijken in alle bestandsformaten, behalve
+          <span class="au-u-italic">.bpmn</span>.
         </AuHelpText>
       </div>
 
