--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,8 +6,9 @@
       @size="small"
       class="au-u-margin-bottom-none"
     >
-      U hebt niet de juiste rechten om processen toe te voegen of aan te passen.
-      Processen of processtappen raadplegen, is wel steeds mogelijk.
+      U beschikt niet over de rechten om inhoud te wijzigen in het Open Proces
+      Huis. Uw toegang is beperkt tot alleen-lezen modus. Neem contact op met de
+      lokale beheerder (ICT).
     </AuAlert>
   {{/if}}
   <AuBodyContainer class="au-u-background-gray-100">
