--- a/app/templates/process-steps/index.hbs
+++ b/app/templates/process-steps/index.hbs
@@ -1,12 +1,12 @@
 <SidebarContainer>
   <:sidebar>
     <div class="au-c-sidebar">
-      <div class="au-c-sidebar__content au-o-box au-o-box--small">
+      <div class="au-c-sidebar__content">
         <form
           {{on "reset" this.resetFilters}}
-          class="au-o-grid au-o-grid--small"
+          class="au-o-box au-o-box--small au-o-flow au-o-flow--small"
         >
-          <div class="au-o-grid__item au-u-1-2@small au-u-1-1@medium">
+          <div>
             <AuLabel for="filter-name">Filter op naam</AuLabel>
             <ProcessStepSelectByName
               @id="filter-name"
@@ -15,7 +15,7 @@
               class="grow"
             />
           </div>
-          <div class="au-o-grid__item au-u-1-2@small au-u-1-1@medium">
+          <div>
             <AuLabel for="filter-type">Filter op type</AuLabel>
             <ProcessStepSelectByType
               @id="filter-type"
@@ -24,7 +24,7 @@
               class="grow"
             />
           </div>
-          <div class="au-o-grid__item">
+          <div>
             <AuButton
               @icon="undo"
               @skin="link"
@@ -43,8 +43,11 @@
     <PageHeader>
       <:title>Processtappen</:title>
       <:subtitle>
-        <AuLink @route="help" @skin="secondary" @icon="circle-info">Over BPMN
-          bestanden</AuLink>
+        {{! 
+          TODO: Reintroduce when help page gets content
+          }}
+        {{! <AuLink @route="help" @skin="secondary" @icon="circle-info">Over BPMN
+          bestanden</AuLink> }}
       </:subtitle>
       <:action></:action>
     </PageHeader>
@@ -89,8 +92,8 @@
           </TableMessage>
         {{else}}
           <c.body as |element|>
-            <td>{{or element.name "/"}}</td>
-            <td>{{capitalize-first (or element.type.name "/")}}</td>
+            <td>{{or (truncate element.name 50 true) "/"}}</td>
+            <td>{{capitalize (or element.type.name "/")}}</td>
             <td>{{element.bpmnProcess.bpmnFile.name}}</td>
             <td>
               <LinkTo
