--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -25,12 +25,9 @@
               {{!template-lint-disable require-valid-alt-text}}
             />
           </div>
-          {{#if this.currentSession.canEdit}}
-            <p>Raadpleeg processen en originele BPMN-bestanden. Doorzoek
-              processtappen en upload processen.</p>
-          {{else}}
-            <p>Raadpleeg processen en originele BPMN-bestanden.</p>
-          {{/if}}
+          <p>Raadpleeg, doorzoek en upload processen als originele
+            BPMN-bestanden naar het Open Proces Huis, de centrale bron voor
+            lokale besturen in Vlaanderen om processen te ontdekken en te delen.</p>
         </AuContent>
         <div class="au-c-home__form au-o-flow">
           <div class="au-o-grid au-o-grid--small">
