Fix missing capital letter

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -15,7 +15,7 @@
     <section class="c-home">
       <div class="au-o-flow">
         <AuContent>
-          <AuHeading @level="1" @skin="2">Welkom bij Open Proces huis, jouw
+          <AuHeading @level="1" @skin="2">Welkom bij Open Proces Huis, jouw
             centrale bron voor het ontdekken en delen van processen.</AuHeading>
           <div class="c-home__visual">
             <img
