Update website titles and text (#40)
* Change welcome text

* Fix missing capital letter

* Rid standalone dash from website title

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -15,7 +15,7 @@
     <section class="c-home">
       <div class="au-o-flow">
         <AuContent>
-          <AuHeading @level="1" @skin="2">Welkom bij Open Proces huis, jouw
+          <AuHeading @level="1" @skin="2">Welkom bij Open Proces Huis, jouw
             centrale bron voor het ontdekken en delen van processen.</AuHeading>
           <div class="c-home__visual">
             <img
@@ -25,12 +25,9 @@
               {{!template-lint-disable require-valid-alt-text}}
             />
           </div>
-          {{#if this.currentSession.canEdit}}
-            <p>Raadpleeg processen en originele BPMN-bestanden. Doorzoek
-              processtappen en upload processen.</p>
-          {{else}}
-            <p>Raadpleeg processen en originele BPMN-bestanden.</p>
-          {{/if}}
+          <p>Raadpleeg, doorzoek en upload processen als originele
+            BPMN-bestanden naar het Open Proces Huis, de centrale bron voor
+            lokale besturen in Vlaanderen om processen te ontdekken en te delen.</p>
         </AuContent>
         <div class="au-c-home__form au-o-flow">
           <div class="au-o-grid au-o-grid--small">
